--- a/src/component/Contact/Contact.scss
+++ b/src/component/Contact/Contact.scss
@@ -76,14 +76,14 @@
 
 .contact-viber {
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   padding-left: 10px;
   margin-bottom: 10px;
 }
 
 .contact-telegram {
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   padding-left: 6px;
 }
 
