--- a/src/component/Scheme/iconfont.scss
+++ b/src/component/Scheme/iconfont.scss
@@ -1,26 +1,25 @@
 @font-face {
-  font-family: 'icomoon';
-  src:  url('./fonts/icomoon.eot?55ec67');
-  src:  url('./fonts/icomoon.eot?55ec67#iefix') format('embedded-opentype'),
-    url('./fonts/icomoon.ttf?55ec67') format('truetype'),
-    url('./fonts/icomoon.woff?55ec67') format('woff'),
-    url('./fonts/icomoon.svg?55ec67#icomoon') format('svg');
+  font-family: "icomoon";
+  src: url("./fonts/icomoon.eot?55ec67");
+  src: url("./fonts/icomoon.eot?55ec67#iefix") format("embedded-opentype"),
+    url("./fonts/icomoon.ttf?55ec67") format("truetype"),
+    url("./fonts/icomoon.woff?55ec67") format("woff"),
+    url("./fonts/icomoon.svg?55ec67#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
 }
 
-[class^="icon-"]::before, [class*=" icon-"]::before {
-  /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'icomoon' !important;
-  speak: never;
+[class^="icon-"]::before,
+[class*=" icon-"]::before {
+  font-family: "icomoon" !important;
+
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
   text-transform: none;
   line-height: 1;
 
-  /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
