change fotos & fixed privacy policy

--- a/src/component/About/About.scss
+++ b/src/component/About/About.scss
@@ -32,7 +32,7 @@
 .about__container {
   position: absolute;
   background-color: rgb(20, 7, 7);
-  background-image: url("../../img/Bg_about_container.jpg");
+  background-image: url("../../img/Bg_about_container3.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   z-index: 1;
