--- a/src/component/Social/Social.scss
+++ b/src/component/Social/Social.scss
@@ -27,9 +27,18 @@
        
   }
  
+  
+  
+
+
+
+
   .insta-icon img:hover, .fb-icon img:hover, .twit-icon img:hover {
-    filter: drop-shadow(0px 0px 8px rgba(231, 225, 225, 0.788));
-       
+    filter: drop-shadow(0px 1px 12px rgba(231, 225, 225, 0.892));
+    transform: scale(1.2);
+    -webkit-transform: scale(1.3);
+    transform-origin: 50% 50%;
+    -webkit-transform-origin: 50% 50%;
   }
 
   .fb-icon::before {
