--- a/src/component/Footer/Footer.scss
+++ b/src/component/Footer/Footer.scss
@@ -66,7 +66,7 @@
   position: relative;
   width: 100%;
   display: flex;
-  //justify-content: center;
+
 }
 
 .footer-input {
@@ -180,6 +180,14 @@
   bottom: 1%;
   right: 1%;
   margin-left: 10px;
+}
+
+.order-link {
+  color: white;
+  font-size: 18px;
+  margin-left: 10px;
+  border-bottom: 1px solid white;;
+
 }
 
 @media (max-width: 1200px) and (min-width:991px) {
