--- a/src/component/Scheme/Scheme.scss
+++ b/src/component/Scheme/Scheme.scss
@@ -172,7 +172,19 @@ cursor: pointer;
   top: 87%;
   right: 26%;
 }
-
+/*
+.gallery-lightbox {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items:center;
+  z-index: 1000000;
+}
+*/
 
 
 
