--- a/src/component/Scheme/Scheme.scss
+++ b/src/component/Scheme/Scheme.scss
@@ -58,7 +58,7 @@
   -webkit-transform: scale(0.9);
   transform-origin: 50% 50%;
   -webkit-transform-origin: 50% 50%;
-cursor: pointer;
+  cursor: pointer;
 }
 
 .icon-HandleBg {
@@ -118,6 +118,14 @@ cursor: pointer;
   font-weight: 700;
 }
 
+.sheme-about-pointer {
+  position: absolute;
+  width: 100px;
+  height: 30px;
+  display: flex;
+  z-index: 3;
+}
+
 .sheme__text p {
   text-align: left;
 }
@@ -172,21 +180,6 @@ cursor: pointer;
   top: 87%;
   right: 26%;
 }
-/*
-.gallery-lightbox {
-  position: relative;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items:center;
-  z-index: 1000000;
-}
-*/
-
-
 
 @media (max-width: 1360px) {
   .wrapper-block-scheme {
