--- a/src/component/About/About.scss
+++ b/src/component/About/About.scss
@@ -58,6 +58,32 @@
   height: 38rem;
 }
 
+.sheme-pointer-title {
+  display: flex;
+  justify-content: center;
+ align-items: center;
+ color: white;
+  font-size: 34px;
+ font-weight: 400;
+ font-family: "Dongle", sans-serif;
+ letter-spacing: 0.05rem;
+ margin-right: 12px;
+ padding-bottom: 3px;
+}
+.sheme-pointer-icon {
+  width: 25px;
+  height: 25px;
+  
+}
+.icon0a{
+  position: absolute;
+  justify-content: center;
+  text-align: center;
+  left: 47%;
+ 
+}
+
+
 @media (max-width: 1360px) {
   .container__halfpageRight {
     width: 54%;
