--- a/src/component/Footer/Footer.scss
+++ b/src/component/Footer/Footer.scss
@@ -13,9 +13,7 @@
   z-index: 0;
   margin: 0;
   padding: 0;
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
-    "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+   font-family: "Sofia Sans", sans-serif;
   line-height: 1.5;
   color: white;
 }
@@ -54,6 +52,8 @@
   flex-direction: column;
   flex: 0 0 35%;
   margin-left: 10px;
+  font-family: "Sofia Sans", sans-serif;
+  letter-spacing: 0.07rem;
 }
 
 .footer__about__items-form {
@@ -97,13 +97,19 @@
   color: white;
   text-decoration: none;
   font-size: 16px;
-  line-height: 2.3em;
+  line-height: 1.5rem;
+  font-weight: 400;
+ 
+  letter-spacing: 0.05rem;
 }
 
 .footer__about__items__title {
   color: white;
-  font-size: 22px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
+  font-size: 34px;
+  font-weight: 400;
+  font-family: "Dongle", sans-serif;
+  letter-spacing: 0.05rem;
 }
 
 .footer_copyright {
@@ -124,6 +130,7 @@
 }
 
 .footer_content {
+
   margin-top: 15px;
   margin-right: 20px;
 }
@@ -167,8 +174,13 @@
 
 .text-copyright-author,
 .text-copyright {
+  display: flex;
+  flex-direction: row;
   font-size: 12px;
   color: white;
+}
+.text-copyright-part2{
+  margin: 0 5px;
 }
 
 .text-copyright-author:hover {
