--- a/src/component/SliderSamples/SliderSamples.scss
+++ b/src/component/SliderSamples/SliderSamples.scss
@@ -32,6 +32,9 @@
   left: 1%;
   top: 50%;
   transform: translateY(-50%);
+
+
+
   @media (max-width: 590px) {
     left: 15%;
     bottom: 0;
@@ -100,10 +103,9 @@
 
 .title-slider {
   color: white;
-  font-size: 32px;
-  display: flex;
+  font-size: 24px;
+  letter-spacing: 0.07rem ;
   text-align: center;
-  justify-content: center;
   position: absolute;
-  top: 0;
+  top: 1%;
 }
