--- a/src/component/About/About.scss
+++ b/src/component/About/About.scss
@@ -61,28 +61,25 @@
 .sheme-pointer-title {
   display: flex;
   justify-content: center;
- align-items: center;
- color: white;
+  align-items: center;
+  color: white;
   font-size: 34px;
- font-weight: 400;
- font-family: "Dongle", sans-serif;
- letter-spacing: 0.05rem;
- margin-right: 12px;
- padding-bottom: 3px;
+  font-weight: 400;
+  font-family: "Dongle", sans-serif;
+  letter-spacing: 0.05rem;
+  margin-right: 12px;
+  padding-bottom: 3px;
 }
 .sheme-pointer-icon {
   width: 25px;
   height: 25px;
-  
 }
-.icon0a{
+.icon0a {
   position: absolute;
   justify-content: center;
   text-align: center;
   left: 47%;
- 
 }
-
 
 @media (max-width: 1360px) {
   .container__halfpageRight {
@@ -172,6 +169,9 @@
   .about__container {
     background-position: 60% 20%;
   }
+  .icon0a {
+    left: 35%;
+  }
   .container__halfpageRight {
     width: 64%;
     height: 97%;
@@ -186,43 +186,44 @@
   }
 }
 
+@media (max-width: 880px) {
+  .icon0a {
+    left: 31%;
+  }
+}
+
 @media (max-width: 800px) {
+  .icon0a {
+    left: 37%;
+  }
   .about__container {
     background-position: 60% 20%;
   }
   .container__halfpageRight {
-    width: 70%;
+    width: 64%;
     height: 97%;
   }
   .container__halfpageLeft {
-    width: 30%;
+    width: 36%;
     height: 97%;
   }
   .container__halfpage__wrapperLeft {
-    width: 32rem;
+    width: 30rem;
     height: 34rem;
   }
 }
 
-@media (max-width: 600px) {
-  .about__container {
-    background-position: 70% 20%;
-  }
-}
-@media (max-width: 400px) {
-  .about__container {
-    background-position: 80% 20%;
-  }
-}
-
 @media (max-width: 700px) and (min-width: 50px) {
+  .icon0a {
+    top: 4%;
+    left: 7%;
+  }
+
   .container__halfpageLeft,
   .container__halfpage__wrapperLeft {
     display: none;
   }
-}
 
-@media (max-width: 700px) and (min-width: 50px) {
   .container__halfpageRight,
   .container__halfpage__wrapperRight {
     width: 100%;
@@ -231,15 +232,80 @@
   }
 }
 
-@media (max-width: 570px) and (min-width: 50px) {
+@media (max-width: 590px) and (min-width: 50px) {
+  .about__container {
+    background-position: 70% 20%;
+  }
+
+  .icon0a {
+    left: 27%;
+  }
   .about__container {
     padding: 15px 0 15px 5px;
   }
 }
 
-@media (max-width: 497px) {
+@media (max-width: 500px) {
+  .icon0a {
+    top: 4%;
+    left: 7%;
+  }
   .diagram__scheme-container {
     width: 100%;
     height: 100%;
   }
+
+.sheme-pointer-title {
+  font-size: 30px;  
+  letter-spacing: 0.05rem;
+  margin-right: 8px;
+  padding-bottom: 3px;
+text-align: center;
+}
+.sheme-pointer-icon {
+  width: 23px;
+  height: 23px;
+}
+.icon0a {
+  left: 43%;
+}
+}
+
+@media (max-width: 450px) {
+    .icon0a {
+    top: 2%;
+    left: 38%;
+  }
+  .sheme-pointer-title {
+    font-size: 30px;
+    padding-bottom: 2px;
+  }
+
+}
+
+@media (max-width: 400px) {
+  
+  .about__container {
+    background-position: 80% 20%;
+  }
+  .icon0a {
+    top: 2%;
+    left: 38%;
+    margin-bottom: 5px;
+  }
+  .sheme-pointer-title {
+    font-size: 30px;
+    padding-bottom: 2px;
+  }
+
+}
+
+@media (max-width: 299px) {
+  .icon0a {
+  top: 2%;
+  left: 34%;
+  margin-bottom: 5px;
+}
+
+
 }
