--- a/src/component/Footer/Footer.scss
+++ b/src/component/Footer/Footer.scss
@@ -129,12 +129,6 @@
   justify-content: flex-start;
 }
 
-.footer_content {
-
-  margin-top: 15px;
-  margin-right: 20px;
-}
-
 .social__items li {
   margin: 0 6px;
 }
@@ -172,15 +166,22 @@
   width: 32px;
 }
 
-.text-copyright-author,
-.text-copyright {
+
+.footer_content{
+  margin-top: 23px;
+  margin-left: 10px;
   display: flex;
   flex-direction: row;
   font-size: 12px;
   color: white;
 }
+
 .text-copyright-part2{
-  margin: 0 5px;
+ margin: 0 5px;
+}
+.text-copyright-author{
+  font-size: 12px;
+  color: white;
 }
 
 .text-copyright-author:hover {
@@ -413,25 +414,22 @@
     font-size: 16px;
     line-height: 1.3em;
   }
-.footer_content{
-  margin-left: 10px;
-}
+
   .footer__about__items__title {
     font-size: 20px;
     margin-bottom: 18px;
   }
+
+  .text-copyright{
+    display: none;
+  }
   .footer_copyright{
+    margin-top: 50px;
     justify-content: space-between;
   }
-
-  .footer_copyright {
-    margin-top: 50px;
-    }
-
-
 }
 
-@media (max-width: 480px) and (min-width: 180px){
+@media (max-width: 480px) and (min-width: 80px){
   .footer {
     background-size: cover;
     max-height: 50vh;
@@ -501,5 +499,18 @@
   .footer__about__items__title {
     font-size: 18px;
     margin-bottom: 18px;
+  }
+  .text-copyright{
+    display: none;
+  }
+}
+
+@media (max-width: 392px) {
+  .text-copyright-part2,
+  .text-copyright{
+    display: none;
+  }
+  .text-copyright-author{
+font-size: 10px;
   }
 }
