change background component Menu

--- a/src/component/Navbar/Navbar.scss
+++ b/src/component/Navbar/Navbar.scss
@@ -76,12 +76,12 @@
   .mobile-btn-fit {
     width: 100%;
     object-fit: cover;
-  }
-
+  }}
+/*
   .css-3dzjca-MuiPaper-root-MuiPopover-paper-MuiMenu-paper {
     background-color: #3d4c51 !important;
   }
-}
+}*/
 
 @media (max-width: 480px) {
   .nav-list {
