--- a/src/pages/SupportForm/SupportForm.scss
+++ b/src/pages/SupportForm/SupportForm.scss
@@ -77,6 +77,12 @@ color: white;
   box-shadow: -2px 10px 10px rgba(0, 0, 0, 0.911);
 }
 
+textarea::placeholder {  
+  color: #111213;
+  font-size: 18px;
+  font-family: 'Sofia Sans', sans-serif;
+  }
+  
 .support-btn {
   border-radius: 28px;
   font-size: 1.2rem;
@@ -85,3 +91,79 @@ color: white;
  
  }
 
+@media (max-width: 550px){
+  .support-container {
+    width: 490px ;
+    }
+.form-support input {
+  width: 90%;
+}
+.form-support__items__textarea{
+   width: 26rem;
+}
+}
+
+
+@media (max-width: 500px){
+  .support-container {
+    width: 440px ;
+    }
+  .form-support input {
+    width: 78%;
+  }
+  .form-support__items__textarea{
+     width: 21rem;
+  }
+  }
+
+  @media (max-width: 450px){
+    .support-container {
+      width: 390px ;
+      }
+    .form-support input {
+      width: 74%;
+    }
+    .form-support__items__textarea{
+       width: 18rem;
+    }
+    }
+
+    @media (max-width: 370px){
+      .icon-operator{
+        font-size: 34px;
+        margin-right: 15px;
+      }
+      .support-title{
+        font-size: 22px;
+      }
+      .support-container {
+        width: 330px ;
+        }
+      .form-support input {
+        width: 74%;
+      }
+      .form-support__items__textarea{
+         width: 15rem;
+      }
+      }
+
+
+      
+    @media (max-width: 290px){
+      .icon-operator{
+        font-size: 28px;
+        margin-right: 10px;
+      }
+      .support-title{
+        font-size: 18px;
+      }
+      .support-container {
+        width: 240px ;
+        }
+      .form-support input {
+        width: 74%;
+      }
+      .form-support__items__textarea{
+         width: 12rem;
+      }
+      }
