--- a/src/component/Footer/Footer.scss
+++ b/src/component/Footer/Footer.scss
@@ -56,6 +56,20 @@
   letter-spacing: 0.07rem;
 }
 
+.items-logo__logo{
+  position: relative;
+  width: 40px;
+  height: 40px;
+}
+
+.items-logo__logo img{
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+
+
 .footer__about__items-form {
   position: relative;
   flex-direction: column;
