--- a/src/component/HeaderPage/HeaderPage.scss
+++ b/src/component/HeaderPage/HeaderPage.scss
@@ -61,6 +61,21 @@
   filter: drop-shadow(5px 4px 2px rgba(0, 0, 0, 0.5));
 }
 
+.items-home__logo{
+  position: absolute;
+  width: 90px;
+  height: 90px;
+  left: 13%;
+  top: 48%;
+}
+
+.items-home__logo img{
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+
 .home__title {
   position: absolute;
   bottom: 20%;
