--- a/src/component/Footer/Footer.scss
+++ b/src/component/Footer/Footer.scss
@@ -58,8 +58,9 @@
 
 .items-logo__logo{
   position: relative;
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
+  margin-bottom: 5px;
 }
 
 .items-logo__logo img{
@@ -105,6 +106,7 @@
   margin-left: 42px;
   margin-top: 4px;
   font-weight: 500;
+  padding: 10px 30px 10px 30px;
 }
 
 .footer__about__items__link__text {
@@ -216,6 +218,7 @@
   border-bottom: 1px solid white;;
 
 }
+
 
 @media (max-width: 1200px) and (min-width:991px) {
   .footer {
