--- a/src/component/HeaderPage/HeaderPage.scss
+++ b/src/component/HeaderPage/HeaderPage.scss
@@ -55,7 +55,7 @@
 .home__wrapper__inscription-logo {
   position: absolute;
   left: 5%;
-  top: 19%;
+  top: 24%;
   height: auto;
   max-width: 420px;
   filter: drop-shadow(5px 4px 2px rgba(0, 0, 0, 0.5));
@@ -63,10 +63,10 @@
 
 .items-home__logo{
   position: absolute;
-  width: 90px;
-  height: 90px;
-  left: 13%;
-  top: 48%;
+  width: 50px;
+  height: 50px;
+  left: 15%;
+  top: 9%;
 }
 
 .items-home__logo img{
@@ -107,6 +107,7 @@
   bottom: 10%;
   left: 15%;
   border-radius: 28px;
+  padding: 4px 30px 4px 30px;
 }
 
 .home-btn__icon-arrow {
@@ -114,6 +115,17 @@
   height: 40px;
   color: #dde8e8;
 }
+
+@media (max-width: 500px) and (min-width: 400px) {
+  .home__wrapper__inscription-logo {
+    left: 5%;
+    top: 19%;
+    height: auto;
+    max-width: 300px;
+  }
+
+}
+
 
 @media (max-width: 399px) and (min-width: 180px) {
   .home__wrapper__main-photo {
